--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,10 @@
 <project name="eagleML" default="default" basedir=".">
     <description>Builds, tests, and runs the project eagleML.</description>
     <import file="nbproject/build-impl.xml"/>
+    <javacc
+        target="src/neoml/NeoMLParser.jj"
+        javacchome="D:\\javacc-6.0"
+    />
     <!--
 
     There exist several targets which are by default empty and which can be 
