--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /build/
 /dist/
+/src/eagleml/Token.java
+/src/eagleml/JavaCharStream.java
+/src/eagleml/TokenMgrError.java
+/src/eagleml/ParseException.java
+/src/eagleml/EagleMLParserConstants.java
+/src/eagleml/EagleMLParserTokenManager.java
+/src/eagleml/EagleMLParser.java
